test: 运行所有单元测试通过
- 所有模块测试通过（claude-code-java-sdk 和 claude-code-gui）
- Tests run: 119, Failures: 0, Errors: 0, Skipped: 0
- 包含认证、PTY交互、策略模式、工具系统等核心功能测试